RESOLVED FIXED 263832
AX: 17 AccessibilityRole variants never constructed, making them effectively dead code
https://bugs.webkit.org/show_bug.cgi?id=263832
Summary AX: 17 AccessibilityRole variants never constructed, making them effectively ...
Tyler Wilcock
Reported 2023-10-28 13:21:48 PDT
This hurts compile times and also hurts performance, as the compiler must generate branches for these roles that will never actually be taken.
Attachments
Patch (23.45 KB, patch)
2023-10-28 13:26 PDT, Tyler Wilcock
cfleizach: review+
ews-feeder: commit-queue-
Patch (23.88 KB, patch)
2023-10-28 13:31 PDT, Tyler Wilcock
no flags
Patch (23.88 KB, patch)
2023-10-28 13:34 PDT, Tyler Wilcock
no flags
Radar WebKit Bug Importer
Comment 1 2023-10-28 13:21:56 PDT
Tyler Wilcock
Comment 2 2023-10-28 13:26:00 PDT
Tyler Wilcock
Comment 3 2023-10-28 13:31:06 PDT
Tyler Wilcock
Comment 4 2023-10-28 13:34:25 PDT
EWS
Comment 5 2023-10-28 18:15:56 PDT
Committed 269898@main (f304f766b590): <https://commits.webkit.org/269898@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 468385 [details].
Note You need to log in before you can comment on or make changes to this bug.