AX: 17 AccessibilityRole variants never constructed, making them effectively dead code https://bugs.webkit.org/show_bug.cgi?id=263832 rdar://problem/117631943

Reviewed by Chris Fleizach.

This hurts compile times and also hurts performance, as the compiler must generate branches
for these roles that will never actually be taken.

* Source/WebCore/accessibility/AXCoreObject.h:
(WebCore::accessibilityRoleToString):
* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::supportsExpanded const):
(WebCore::AccessibilityObject::supportsRowCountChange const):
(WebCore::AccessibilityObject::shouldFocusActiveDescendant const):
* Source/WebCore/accessibility/atspi/AccessibilityAtspi.cpp:
* Source/WebCore/accessibility/atspi/AccessibilityObjectAtspi.cpp:
(WebCore::atspiRole):
* Source/WebCore/accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper accessibilityCanFuzzyHitTest]):
(-[WebAccessibilityObjectWrapper determineIsAccessibilityElement]):
* Source/WebCore/accessibility/mac/AccessibilityObjectMac.mm:
(WebCore::Accessibility::createPlatformRoleMap):
* Source/WebCore/page/InteractionRegion.cpp:
(WebCore::shouldAllowAccessibilityRoleAsPointerCursorReplacement):

Canonical link: https://commits.webkit.org/269898@main