Source/WebCore/page/InteractionRegion.cpp
@@ -97,7 +97,6 @@ static bool shouldAllowAccessibilityRoleAsPointerCursorReplacement(const Element
     switch (AccessibilityObject::ariaRoleToWebCoreRole(element.attributeWithoutSynchronization(HTMLNames::roleAttr))) {
     case AccessibilityRole::Button:
     case AccessibilityRole::Checkbox:
-    case AccessibilityRole::DisclosureTriangle:
     case AccessibilityRole::ImageMapLink:
     case AccessibilityRole::Link:
     case AccessibilityRole::WebCoreLink:
